--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -1,6 +1,81 @@
-.carousel__item-main {
-    border-radius: 30px;
-    min-height: 0;
+.image-container {
+  position: relative;
+  width: 100%;
+}
+
+.image-container::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
+}
+
+.overlay-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  background-image: url("https://hanok.jeonju.go.kr/uploads/editor/2019/12/08847ebd8a96fe9c3969155049ce06c9.jpg");
+  background-repeat: "no-repeat";
+  background-size: cover;
+}
+
+.overlay-text2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  text-align: center;
+  width: 100%;
+  height: 200vh;
+  background-image: url("https://c0.wallpaperflare.com/preview/278/411/729/seoul-south-korea-bukchon-hanok-village-city.jpg ");
+  background-repeat: "no-repeat";
+  background-size: cover;
+}
+
+.image-container-2 {
+  position: relative;
+  width: 100%;
+}
+
+.image-container-2::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
+}
+
+.overlay-text2 h3,
+.overlay-text2 h1 {
+  margin: 0;
+  backdrop-filter: blur(0.1rem);
+}
+
+.scroll-button {
+  z-index: 1;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.main-controller{
+  height: auto;
+    max-width: 1900px;
+    width: 100%;
+    margin: auto;
+    
+}
+.carousel__item {
+    min-height: 10vh;
     width: 100%;
     background-color: var(--vc-clr-primary);
     color: var(--vc-clr-white);
@@ -9,36 +84,109 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    object-fit: cover;
   }
-  .carousel__item-main2 {
-    max-height: 10vh;
+  .carousel__item {
+    min-height: 10vh;
     width: 100%;
     background-color: var(--vc-clr-primary);
     color: var(--vc-clr-white);
+    font-size: 20px;
     border-radius: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    object-fit: cover;
   }
-  
-  .carousel__item-content {
+  .carousel__item2 {
+    min-height: 10vh;
+    width: 100%;
+    background-color: var(--vc-clr-primary);
+    color: var(--vc-clr-white);
+    font-size: 20px;
+    border-radius: 8px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    object-fit: cover;
   }
-  
-  .carousel__item-content img {
-    max-width: 100%;
-    max-height: 100%;
+  .image-fade-class {
+    position: relative;
+    bottom: -50px;
+    opacity: 0;
+    transition: bottom 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s linear;
   }
-.main-page-margin {
-    margin-top: 2rem;
+  .move-image{
+    position: relative;
+    display: inline-block;
+    background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.9)); /* 그라데이션 배경 설정 */
+  }
+  .image-text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    color: white;    
+    border-top-right-radius: 4px;
+    font-size: 25px;
+    height: 80%; /* 높이를 자동으로 조정 */
+    width: 100%; /* 텍스트 영역 너비를 45%로 설정 */
+    box-sizing: border-box; /* 패딩 포함하여 크기 적용 */
+    opacity: 0; /* 기본적으로 텍스트 숨기기 */
+    transition: opacity 0.3s; /* 투명도 트랜지션 효과 추가 */
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, transparent 100%);
+    white-space: pre-line;
+  }
+    .image-text2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    color: white;    
+    border-top-right-radius: 4px;
+    font-size: 40px;
+    height: 60%; /* 높이를 자동으로 조정 */
+    width: 100%; /* 텍스트 영역 너비를 45%로 설정 */
+    box-sizing: border-box; /* 패딩 포함하여 크기 적용 */
+    opacity: 0; /* 기본적으로 텍스트 숨기기 */
+    transition: opacity 0.3s; /* 투명도 트랜지션 효과 추가 */
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, transparent 100%);
+    white-space: pre-line;
+  }
+  .move-image:hover .image-text{
+    opacity: 1; /* 마우스를 올렸을 때 투명도를 1로 변경하여 텍스트 보이기 */
+  }
+  .move-image:hover .image-text2{
+    opacity: 1; /* 마우스를 올렸을 때 투명도를 1로 변경하여 텍스트 보이기 */
+  }
+  .main-mb{
+    margin-bottom: 10rem;
+  }
+  .check{
+    color: rgb(235, 235, 235);
+    margin-bottom: 5rem;
+  }
+  .stryle-1{
+    margin: 2rem;
+    font-size: 45px;
+  }
+.main-line{
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #000000;  
 }
-.div-img {
-    height: 20svh;   
-    border-radius: 10px;
-    overflow: hidden;
+.main-mt{
+  margin-top: 10rem;
+}
+.back-to-top{  
+  position: fixed;
+  bottom: 20px;
+  left: auto;
+  right: 20px;
+  z-index: 1;
+}
+.main-click{
+  margin-top: 3rem;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
 }
